--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notepad",
+  "name": "@notepad/frontend",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
@@ -14,7 +14,11 @@
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.21.0",
+    "eslint-plugin-react": "^7.22.0",
     "postcss": "^8.2.7",
     "prettier": "2.2.1",
     "tailwindcss": "^2.0.3",
