--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,20 @@
 {
   "name": "@notepad/frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "next": "10.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
