--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.6",
     "next": "10.0.8",
     "react": "17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "yup": "^0.32.9"
   },
